Done with static pages

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,9 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Pixel Point | <%= @title %></title>
+  </head>
+  <body>
+    
+  </body>
+</html>
