--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,9 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Pixel Point | <%= @title %></title>
+  </head>
+  <body>
+    
+  </body>
+</html>
